# InternalWebsiteBackend

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  videoViewsInFirstTwoWeeks.json
.github/workflows/: main_internalwebsitebackend.yml
src/database/: mongo.py
src/models/: auth.py  database.py  general.py  monetization.py  spotify.py  user.py
src/routes/: auth.py  general.py  spotify.py  youtube.py
src/tasks/: followers.py  main.py  refresh.py  remove.py  youtube.py
src/utils/: api.py  auth.py  google.py  months.py  screenshot.py
src/utils/spotify/: client.py  data.py
src/utils/youtube/: analytics.py  client.py  data.py  description.py  upload.py
